Use libdiscid read_sparse()

read_sparse is available starting with libdiscid 0.5.0.
Using read() started to be slow with 0.3.1, since
now ISRCs and the MCN are read by default.
We now only read what we need.

https://bugzilla.gnome.org/show_bug.cgi?id=697899